styled the extension

--- a/popup.css
+++ b/popup.css
@@ -1,6 +1,49 @@
-#text-editor {
-}
+/* #text-editor {
+} */
 
 #canvas-cropped {
     display: none;
 }
+
+body{
+    font-size: 15px;
+}
+.hide {
+    display: none;
+}
+
+#runCode {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: space-between;
+    width: 100%;
+    color: white;
+    background-color:lightcoral;
+    outline: none;
+    border: none;
+    height: 40px;
+    font-size: 25px;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+#btn-text {
+    align-self: center;
+}
+
+.cat-img {
+    height: 30px;
+    width: auto;
+    margin-right: 30px;
+    margin-left: 30px;
+    align-self: center;
+}
+
+#runCode:hover {
+    background-color: rgb(199, 107, 107);
+    transition: 100ms;
+}
+
+/* 
+.CodeMirror { font-family: Arial, monospace; font-size: 20px; } */
